--- a/p1/theme.css
+++ b/p1/theme.css
@@ -7,6 +7,7 @@ html, body {
 	padding: 0;
 	margin: auto auto auto auto; /* Center content */
 	font-family: Helvetica;
+	background: lightgrey;
 }
 
 #header {
@@ -23,7 +24,7 @@ html, body {
 	background: #36454f;
 }
 
-#profile {
+#account {
 	position: fixed; 
 	width: 20%;
 	height: 60px;
@@ -34,6 +35,11 @@ html, body {
 	z-index: 100;
 	color: white;
 	background: #536872;
+}
+
+#account > img {
+	height: 32px;
+	vertical-align: middle;
 }
 
 #sidebar {
@@ -47,10 +53,8 @@ html, body {
 
 
 #scrollable {
-	min-height: 100%-30px;
 	margin: 60px 0 30px 200px;
-	padding: 10px 10px;
-	background: lightgrey;
+	padding: 0 10px 10px 10px;
 }
 
 #footer {
@@ -58,17 +62,24 @@ html, body {
 	width: 100%;
 	height: 30px;
 	line-height: 30px;
-	text-align: center;
+	text-align: right;
 	bottom: 0;
 	z-index: 100;
 	color: white;
 	background: #36454f;
 }
 
+#footer > a > img {
+	margin-right: 4px;
+	vertical-align: middle;
+	height: 20px;
+}
+
 .button1 {
 	width: 170px;
 	height: 32px;
 	padding: 4px 4px;
+	margin-top: 10px;
 	border: none;
 	font-size: 80%;
 	background: #708090;
@@ -105,6 +116,7 @@ input[type="search"] {
 	width: 100%;
 	height: 100px;
 	line-height: 100px;
+	margin-top: 10px;
 	text-align: center;
 	border: none;
 	font-size: 200%;
@@ -118,6 +130,7 @@ input[type="search"] {
 	width: 100%;
 	height: 100px;
 	line-height: 100px;
+	margin-top: 10px;
 	text-align: center;
 	border: none;
 	font-size: 200%;
@@ -127,18 +140,69 @@ input[type="search"] {
 	display: inline-block;
 }
 
-.match1 > * {
-	vertical-align: middle;
-}
-
 .match1 > img {
-	width: 64px;
-}
-
-.match2 > * {
 	vertical-align: middle;
+	width: 64px;
 }
 
 .match2 > img {
+	vertical-align: middle;
 	width: 64px;
+}
+
+.option1 {
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	margin-top: 10px;
+	text-align: center;
+	border: none;
+	font-size: 200%;
+	background: #6e7f80;
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.option1 > img {
+	vertical-align: middle;
+	width: 24px;
+}
+
+.option2 {
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	margin-top: 10px;
+	text-align: center;
+	border: none;
+	font-size: 200%;
+	background: linear-gradient(to right, green , #6e7f80, #6e7f80, #6e7f80, green);
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.option2 > img {
+	vertical-align: middle;
+	width: 24px;
+}
+
+.option3 {
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	margin-top: 10px;
+	text-align: center;
+	border: none;
+	font-size: 200%;
+	background: linear-gradient(to right, red , #6e7f80, #6e7f80, #6e7f80, red);
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.option3 > img {
+	vertical-align: middle;
+	width: 24px;
 }
