--- a/p1/theme.css
+++ b/p1/theme.css
@@ -10,113 +10,128 @@ html, body {
 	background: lightgrey;
 }
 
-#header {
+header {
 	position: fixed; 
-	width: 80%;
+	width: 100%;
 	height: 60px;
 	line-height: 60px;
 	text-align: center;
 	left: 0;
 	top: 0;
-	z-index: 100;
+	z-index: 90;
 	font-size: 200%;
 	color: white;
-	background: #36454f;
+	background: #536878;
 }
 
-#dropdown {
+#account {
 	position: fixed; 
-	width: 20%;
+	width: 200px; 
 	height: 60px;
-	line-height: 50px;
+	line-height: 60px;
 	text-align: center;
 	right: 0;
 	top: 0;
 	z-index: 100;
+	font-size: 100%;
 	color: white;
-	background: #536872;
+	background: #708090;
+    border: none;
 }
-
 
 #account > img {
 	height: 32px;
 	vertical-align: middle;
 }
 
-#account {
-	position: fixed; 
-	width: 20%;
-	min-width: 151px;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	vertical-align: middle;
-	right: 0;
-	top: 0;
-	z-index: 100;
-	color: white;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: absolute;
+    right: 200px;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: fixed;
+    width: 200px;
 	background: #536872;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 100;
 }
 
-
-/* Menu desplegable */
-#dropdown  ul ul {
-	display: none;
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
 }
 
-#dropdown  ul li:hover #account > ul {
-	width: 100%;
-	display: block;
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+	background: #708090;
 }
 
-#dropdown  ul {
-	background: #efefef; 
-	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
-	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
-	padding: 0 20px;
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover #account {
+	background: #36454f;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown2 {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown2-content {
+    float: left;
+    display: none;
+    position: absolute;
+    width: 200px;
+    left: 190px;
+    top: 10px;
+	font-size: 10pt;
+	background: #536878;
+    box-shadow: 8px 0px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown2-content a {
+    color: white;
+    padding: 9px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown2-content a img {
 	vertical-align: middle;
-	list-style: none;
-	position: center;
-	display: inline-table;
-}
-#dropdown  ul:after {
-	content: ""; 
-	clear: both; 
-	display: block;
+	width: 32px;
 }
 
-
-#dropdown  ul li {
-	float: left;
+/* Change color of dropdown links on hover */
+.dropdown2-content a:hover {
+	background: #708090;
 }
 
-
-#dropdown  ul li:hover a {
-	color: #fff;
+/* Show the dropdown menu on hover */
+.dropdown2:hover .dropdown2-content {
+    display: block;
 }
 
-#dropdown  ul li a {
-	display: block; 
-	padding: 0px 40px;
-	color: #757575; 
-	text-decoration: none;
-}
-
-#dropdown  ul ul {
-	background: #5f6975; border-radius: 0px; padding: 0;
-	position: absolute; top: 100%;
-}
-
-#dropdown  ul ul li {
-	float: none; 
-	border-top: 1px solid #6b727c;
-	border-bottom: 1px solid #575f6a;
-	position: relative;
-}
-
-#dropdown  ul ul li a:hover {
-	background: #4b545f;
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown2:hover .button1 {
+    padding-right: 20px;
+    width: 200px;
+	background: #536878;
 }
 
 #sidebar {
@@ -125,7 +140,17 @@ html, body {
 	width: 180px;
 	height: 100%;
 	padding: 10px 10px;
-	background: #536878;
+	background: #36454f;
+}
+
+#sidebar .links {
+    position: fixed;
+	width: 180px;
+    height: 40px;
+    line-height: 40px;
+    bottom: 30px;
+    text-align: center;
+	font-size: 10pt;
 }
 
 
@@ -139,7 +164,7 @@ html, body {
 	text-align: center;
 }
 
-#footer {
+footer {
 	position: fixed; 
 	width: 100%;
 	height: 30px;
@@ -148,22 +173,24 @@ html, body {
 	bottom: 0;
 	z-index: 100;
 	color: white;
-	background: #36454f;
+	background: #536878;
 }
 
-#footer > a > img {
+footer > a > img {
 	margin-right: 4px;
 	vertical-align: middle;
 	height: 20px;
 }
 
 .button1 {
-	width: 170px;
-	height: 32px;
-	padding: 4px 4px;
+	width: 180px;
+	height: 50px;
+    line-height: 50px;
+    text-align: left;
+	padding: 0 40px;
 	margin-top: 10px;
 	border: none;
-	font-size: 80%;
+	font-size: 120%;
 	background: #708090;
 	color: white;
 	text-decoration: none;
@@ -172,6 +199,7 @@ html, body {
 
 .button1 > img {
 	vertical-align: middle;
+    margin-right: 8px;
 	width: 32px;
 }
 
@@ -190,6 +218,40 @@ html, body {
 
 .button2 > * {
 	padding: 0 10px;
+}
+
+.buttonL {
+	height: 20px;
+    width: 90px;
+	line-height: 20px;
+	text-align: center;
+	border: none;
+    border-radius: 10px 0 0 10px;
+	background: #708090;
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.buttonL:hover {
+	background: #536878;
+}
+
+.buttonR {
+	height: 20px;
+    width: 90px;
+	line-height: 20px;
+	text-align: center;
+	border: none;
+    border-radius: 0 10px 10px 0;
+	background: #708090;
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.buttonR:hover {
+	background: #536878;
 }
 
 input[type="search"] {
