Tentative of first assignment.

--- a/p1/theme.css
+++ b/p1/theme.css
@@ -164,6 +164,10 @@ header {
 	text-align: center;
 }
 
+#scrollable > form > input[type="submit"] {
+    margin: 10px;
+}
+
 footer {
 	position: fixed; 
 	width: 100%;
