--- a/p1/theme.css
+++ b/p1/theme.css
@@ -180,7 +180,7 @@ footer {
 	background: #536878;
 }
 
-footer > a > img {
+footer  > img {
 	margin-right: 4px;
 	vertical-align: middle;
 	height: 20px;
