--- a/E1_Daniel_Perdices_Sergio_Fuentes/theme.css
+++ b/E1_Daniel_Perdices_Sergio_Fuentes/theme.css
@@ -1,5 +1,12 @@
 html {
-    background: white;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+    background-size: 1800% 1800%;
+    -webkit-animation: rainbow 10s ease infinite;
+    -z-animation: rainbow 16s ease infinite;
+    -o-animation: rainbow 16s ease infinite;
+    animation: rainbow 16s ease infinite;
     font-family: Helvetica;
 }
 
@@ -15,9 +22,53 @@ body {
     padding: 20px;
     border: solid 2px SteelBlue;
     border-radius: 16px;
-    background: SkyBlue;
+    background-image: url(http://dbmmo.com/images/bg.png);
+    background-size: 3232px 272px;
+    background-position: 0px -30px;
+    background-repeat: repeat-x;
+
+    animation: animatedBackground 40s linear infinite;
+
     text-align: justify;
     display: block;
+}
+
+@-webkit-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-moz-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-o-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@keyframes rainbow { 
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+
+@-webkit-keyframes animatedBackground {
+    from { background-position: 0 -30px; }
+    to { background-position: 100% -30px; }
+}
+@-moz-keyframes animatedBackground {
+    from { background-position: 0 -30px; }
+    to { background-position: 100% -30px; }
+}
+@-o-keyframes animatedBackground {
+    from { background-position: 0 -30px; }
+    to { background-position: 100% -30px; }
+}
+@keyframes animatedBackground {
+    from { background-position: 0 -30px; }
+    to { background-position: 100% -30px; }
 }
 
 body form > input[type=text], input[type=number], input[type=radio] {
