--- a/p2/theme.css
+++ b/p2/theme.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 header {
-	position: fixed;
+	position: fixed; 
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
@@ -25,8 +25,8 @@ header {
 }
 
 #account {
-	position: fixed;
-	width: 200px;
+	position: fixed; 
+	width: 200px; 
 	height: 60px;
 	line-height: 60px;
 	text-align: center;
@@ -56,7 +56,7 @@ header {
     display: none;
     position: fixed;
     width: 200px;
-	background: #536872;
+	background: #36454f;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 100;
 }
@@ -64,10 +64,56 @@ header {
 /* Links inside the dropdown */
 .dropdown-content a {
     color: white;
+	background: #536872;
     padding: 12px 16px;
     text-align: center;
     text-decoration: none;
     display: block;
+}
+
+.dropdown-content form {
+    margin: 10px;
+    color: lightgrey;
+    font-size: 10pt;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content form > input[type="text"], input[type="password"] {
+    width: 180px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content form > input[type="submit"] {
+    position: relative;
+    width: 80px;
+    height: 30px;
+    margin-top: 20px;
+    color: white;
+	background: #536872;
+    border: none;
+    text-decoration: none;
+}
+
+.dropdown-content form > input[type="submit"]:hover {
+	background: #708090;
+}
+
+.dropdown-content form > input[type="reset"] {
+    position: relative;
+    width: 80px;
+    height: 30px;
+    margin-top: 20px;
+    left: 20px;
+    color: white;
+	background: #536872;
+    border: none;
+    text-decoration: none;
+}
+
+.dropdown-content form > input[type="reset"]:hover {
+	background: #708090;
 }
 
 /* Change color of dropdown links on hover */
@@ -169,7 +215,7 @@ header {
 }
 
 footer {
-	position: fixed;
+	position: fixed; 
 	width: 100%;
 	height: 30px;
 	line-height: 30px;
@@ -351,4 +397,9 @@ input[type="search"] {
 .option > img {
 	vertical-align: middle;
 	width: 24px;
+}
+
+.error {
+    font-weight: bold;
+    color: red;
 }
