--- a/p2/theme.css
+++ b/p2/theme.css
@@ -1,47 +1,48 @@
 /* vim: set noai ts=4 sw=4: */
 html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	margin: auto auto auto auto; /* Center content */
-	font-family: Helvetica;
-	background: lightgrey;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    margin: auto auto auto auto; /* Center content */
+    font-family: Helvetica;
+    background: lightgrey;
 }
 
 header {
-	position: fixed; 
-	width: 100%;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	left: 0;
-	top: 0;
-	z-index: 90;
-	font-size: 200%;
-	color: white;
-	background: #536878;
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    left: 0;
+    top: 0;
+    z-index: 90;
+    font-size: 200%;
+    color: white;
+    background: #536878;
+    cursor: pointer;
 }
 
 #account {
-	position: fixed; 
-	width: 200px; 
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	right: 0;
-	top: 0;
-	z-index: 100;
-	font-size: 100%;
-	color: white;
-	background: #708090;
+    position: fixed;
+    width: 200px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    right: 0;
+    top: 0;
+    z-index: 100;
+    font-size: 100%;
+    color: white;
+    background: #708090;
     border: none;
 }
 
 #account > img {
-	height: 32px;
-	vertical-align: middle;
+    height: 32px;
+    vertical-align: middle;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -56,19 +57,29 @@ header {
     display: none;
     position: fixed;
     width: 200px;
-	background: #36454f;
+    background: #36454f;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 100;
+    z-index: 100;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content a, .dropdown-content .buttonD {
+    width: 200px;
+    height: 50px;
+    line-height: 50px;
+    border: none;
     color: white;
-	background: #536872;
-    padding: 12px 16px;
+    background: #536872;
+    font-size: 12pt;
     text-align: center;
     text-decoration: none;
     display: block;
+    cursor: pointer;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover, .dropdown-content .buttonD:hover {
+    background: #708090;
 }
 
 .dropdown-content form {
@@ -79,7 +90,7 @@ header {
     display: block;
 }
 
-.dropdown-content form > input[type="text"], input[type="password"] {
+.dropdown-content form input[type="text"], .dropdown-content form input[type="password"] {
     width: 180px;
     text-decoration: none;
     display: block;
@@ -91,13 +102,14 @@ header {
     height: 30px;
     margin-top: 20px;
     color: white;
-	background: #536872;
+    background: #536872;
     border: none;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .dropdown-content form > input[type="submit"]:hover {
-	background: #708090;
+    background: #708090;
 }
 
 .dropdown-content form > input[type="reset"] {
@@ -107,18 +119,14 @@ header {
     margin-top: 20px;
     left: 20px;
     color: white;
-	background: #536872;
+    background: #536872;
     border: none;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .dropdown-content form > input[type="reset"]:hover {
-	background: #708090;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-	background: #708090;
+    background: #708090;
 }
 
 /* Show the dropdown menu on hover */
@@ -128,7 +136,7 @@ header {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover #account {
-	background: #36454f;
+    background: #36454f;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -145,8 +153,8 @@ header {
     width: 200px;
     left: 190px;
     top: 10px;
-	font-size: 10pt;
-	background: #536878;
+    font-size: 10pt;
+    background: #536878;
     box-shadow: 8px 0px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -159,13 +167,13 @@ header {
 }
 
 .dropdown2-content a img {
-	vertical-align: middle;
-	width: 32px;
+    vertical-align: middle;
+    width: 32px;
 }
 
 /* Change color of dropdown links on hover */
 .dropdown2-content a:hover {
-	background: #708090;
+    background: #708090;
 }
 
 /* Show the dropdown menu on hover */
@@ -177,37 +185,36 @@ header {
 .dropdown2:hover .button1 {
     padding-right: 20px;
     width: 200px;
-	background: #536878;
+    background: #536878;
 }
 
 #sidebar {
-	float: left;
-	position: fixed;
-	width: 180px;
-	height: 100%;
-	padding: 10px 10px;
-	background: #36454f;
+    float: left;
+    position: fixed;
+    width: 180px;
+    height: 100%;
+    padding: 10px 10px;
+    background: #36454f;
 }
 
 #sidebar .links {
     position: fixed;
-	width: 180px;
+    width: 180px;
     height: 40px;
     line-height: 40px;
     bottom: 30px;
     text-align: center;
-	font-size: 10pt;
+    font-size: 10pt;
 }
 
-
 #scrollable {
-	margin: 60px 0 30px 200px;
-	padding: 0 10px 10px 10px;
+    margin: 60px 0 30px 200px;
+    padding: 0 10px 10px 10px;
 }
 
 #scrollable > form {
-	margin-top: 20px;
-	text-align: center;
+    margin-top: 20px;
+    text-align: center;
 }
 
 #scrollable > form > input[type="submit"] {
@@ -215,188 +222,170 @@ header {
 }
 
 footer {
-	position: fixed; 
-	width: 100%;
-	height: 30px;
-	line-height: 30px;
-	text-align: right;
-	bottom: 0;
-	z-index: 100;
-	color: white;
-	background: #536878;
+    position: fixed;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-align: right;
+    bottom: 0;
+    z-index: 100;
+    color: white;
+    background: #536878;
 }
 
 footer  > img {
-	margin-right: 4px;
-	vertical-align: middle;
-	height: 20px;
+    margin-right: 4px;
+    vertical-align: middle;
+    height: 20px;
 }
 
 .button1 {
-	width: 180px;
-	height: 50px;
+    width: 180px;
+    height: 50px;
     line-height: 50px;
     text-align: left;
-	padding: 0 40px;
-	margin-top: 10px;
-	border: none;
-	font-size: 120%;
-	background: #708090;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
+    padding: 0 40px;
+    margin-top: 10px;
+    border: none;
+    font-size: 120%;
+    background: #708090;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .button1 > img {
-	vertical-align: middle;
+    vertical-align: middle;
     margin-right: 8px;
-	width: 32px;
+    width: 32px;
 }
 
 .button2 {
-	height: 20px;
-	line-height: 20px;
-	text-align: center;
-	border: none;
-	border-radius: 20px;
-	font-size: 12pt;
-	background: #36454f;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.button2 > * {
-	padding: 0 10px;
-}
-
-.buttonL {
-	height: 20px;
-    width: 90px;
-	line-height: 20px;
-	text-align: center;
-	border: none;
-    border-radius: 10px 0 0 10px;
-	background: #708090;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.buttonL:hover {
-	background: #536878;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    border: none;
+    border-radius: 20px;
+    font-size: 12pt;
+    background: #36454f;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 10px;
+    cursor: pointer;
 }
 
 .buttonR {
-	height: 20px;
-    width: 90px;
-	line-height: 20px;
-	text-align: center;
-	border: none;
-    border-radius: 0 10px 10px 0;
-	background: #708090;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
+    height: 20px;
+    width: 180px;
+    line-height: 20px;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    background: #708090;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .buttonR:hover {
-	background: #536878;
+    background: #536878;
 }
 
 input[type="search"] {
-	width: 100%;
-	border: none;
+    width: 100%;
+    border: none;
 }
 
 .title {
-	width: 100%;
-	height: 40px;
-	line-height: 40px;
-	margin-top: 10px;
-	text-align: center;
-	border: none;
-	border-radius: 20px;
-	font-size: 150%;
-	color: #36454f;
-	text-decoration: none;
-	display: inline-block;
-	box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    border-radius: 20px;
+    font-size: 150%;
+    color: #36454f;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 .category {
-	width: 100%;
-	min-width: 459px;
-	height: 40px;
-	line-height: 40px;
-	margin-top: 10px;
-	text-align: center;
-	border: solid 1px #36454f;
-	border-radius: 20px;
-	font-size: 150%;
-	color: #36454f;
-	text-decoration: none;
-	display: inline-block;
-	box-sizing: border-box;
+    width: 100%;
+    min-width: 459px;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 10px;
+    text-align: center;
+    border: solid 1px #36454f;
+    border-radius: 20px;
+    font-size: 150%;
+    color: #36454f;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
 .match1 {
-	width: 100%;
-	min-width: 459px;
-	height: 100px;
-	line-height: 100px;
-	margin-top: 10px;
-	text-align: center;
-	border: none;
-	font-size: 200%;
-	background: linear-gradient(to right, red , #6e7f80, #6e7f80, #6e7f80, green);
-	color: white;
-	text-decoration: none;
-	display: inline-block;
+    width: 100%;
+    min-width: 459px;
+    height: 100px;
+    line-height: 100px;
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    font-size: 200%;
+    background: linear-gradient(to right, red , #6e7f80, #6e7f80, #6e7f80, green);
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .match1 > img {
-	vertical-align: middle;
-	width: 64px;
+    vertical-align: middle;
+    width: 64px;
 }
 
 .match2 {
-	width: 100%;
-	min-width: 459px;
-	height: 100px;
-	line-height: 100px;
-	margin-top: 10px;
-	text-align: center;
-	border: none;
-	font-size: 200%;
-	background: #6e7f80;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
+    width: 100%;
+    min-width: 459px;
+    height: 100px;
+    line-height: 100px;
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    font-size: 200%;
+    background: #6e7f80;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .match2 > img {
-	vertical-align: middle;
-	width: 64px;
+    vertical-align: middle;
+    width: 64px;
 }
 
 .option {
-	width: 100%;
-	height: 100px;
-	line-height: 100px;
-	margin-top: 10px;
-	text-align: center;
-	border: none;
-	font-size: 200%;
-	background: #6e7f80;
-	color: white;
-	text-decoration: none;
-	display: inline-block;
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    font-size: 200%;
+    background: #6e7f80;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .option > img {
-	vertical-align: middle;
-	width: 24px;
+    vertical-align: middle;
+    width: 24px;
 }
 
 .error {
