--- a/p2/theme.css
+++ b/p2/theme.css
@@ -1,8 +1,6 @@
 /* vim: set noai ts=4 sw=4: */
 html, body {
     position: relative;
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     margin: auto auto auto auto; /* Center content */
@@ -46,6 +44,7 @@ header {
 
 #account img {
     height: 32px;
+    margin-right: 8px;
     vertical-align: middle;
 }
 
@@ -227,6 +226,11 @@ header {
     padding: 0 10px 10px 10px;
 }
 
+#scrollable form button {
+    position: relative;
+    margin: auto;
+}
+
 #scrollable form {
     width: 240px;
     margin: 16px auto;
@@ -234,6 +238,10 @@ header {
 
 #scrollable form input {
     width: 100%;
+}
+
+#scrollable form input[type="number"] {
+    width: 220px;
 }
 
 #scrollable form input[type="reset"] {
@@ -361,6 +369,21 @@ input[type="search"] {
     box-sizing: border-box;
 }
 
+.match0 {
+    width: 100%;
+    min-width: 459px;
+    height: 100px;
+    line-height: 100px;
+    margin-top: 10px;
+    text-align: center;
+    border: none;
+    font-size: 20pt;
+    background: linear-gradient(to right, green, #708090, #708090, #708090, red);
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+}
+
 .match1 {
     width: 100%;
     min-width: 459px;
@@ -370,15 +393,10 @@ input[type="search"] {
     text-align: center;
     border: none;
     font-size: 20pt;
-    background: linear-gradient(to right, red , #6e7f80, #6e7f80, #6e7f80, green);
+    background: linear-gradient(to right, red, #708090, #708090, #708090, green);
     color: white;
     text-decoration: none;
     display: inline-block;
-}
-
-.match1 img {
-    vertical-align: middle;
-    height: 64px;
 }
 
 .match2 {
@@ -390,15 +408,61 @@ input[type="search"] {
     text-align: center;
     border: none;
     font-size: 200%;
-    background: #6e7f80;
+    background: #708090;
     color: white;
     text-decoration: none;
     display: inline-block;
 }
 
-.match2 img {
+.match0 img, .match1 img, .match2 img {
     vertical-align: middle;
-    width: 64px;
+    height: 64px;
+}
+
+.money0 {
+    width: 320px;
+    height: 100%;
+    position: relative;
+    float: left;
+    top: -100px;
+    text-align: center;
+    font-size: 20pt;
+    color: white;
+    background: #536878;
+}
+
+.arrow0 {
+    position: relative;
+    float: left;
+    top: -100px;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    border-left: 50px solid #536878;
+}
+
+.money1 {
+    width: 320px;
+    height: 100px;
+    position: relative;
+    float: right;
+    top: -100%;
+    text-align: center;
+    font-size: 20pt;
+    color: white;
+    background: #536878;
+}
+
+.arrow1 {
+    position: relative;
+    float: right;
+    top: -100px;
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    border-right: 50px solid #536878;
 }
 
 .option {
@@ -409,15 +473,10 @@ input[type="search"] {
     text-align: center;
     border: none;
     font-size: 200%;
-    background: #6e7f80;
+    background: #708090;
     color: white;
     text-decoration: none;
     display: inline-block;
-}
-
-.option img {
-    vertical-align: middle;
-    width: 24px;
 }
 
 .error {
