--- a/p2/theme.css
+++ b/p2/theme.css
@@ -237,7 +237,7 @@ header {
 }
 
 #scrollable form input {
-    width: 100%;
+    width: 240px;
 }
 
 #scrollable form input[type="number"] {
@@ -254,6 +254,72 @@ header {
     width: auto;
     margin-top: 16px;
     float: right;
+}
+
+#scrollable form .strength0 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #f5f5f5;
+    font-size: 8pt;
+    box-sizing: border-box;
+}
+
+#scrollable form .strength1 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #ff8b94;
+    font-size: 8pt;
+    box-sizing: border-box;
+}
+
+#scrollable form .strength2 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #ffaaa5;
+    font-size: 8pt;
+    box-sizing: border-box;
+}
+
+#scrollable form .strength3 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #ffd3b6;
+    font-size: 8pt;
+    box-sizing: border-box;
+}
+
+#scrollable form .strength4 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #dcedc1;
+    font-size: 8pt;
+    box-sizing: border-box;
+}
+
+#scrollable form .strength5 {
+    width: 244px;
+    height: 24px;
+    line-height: 24px;
+    padding: 0 3px;
+    border: solid 0.25px grey;
+    background: #a8e6cf;
+    font-size: 8pt;
+    box-sizing: border-box;
 }
 
 footer {
