--- a/p2/theme.css
+++ b/p2/theme.css
@@ -240,8 +240,20 @@ header {
     width: 240px;
 }
 
-#scrollable form input[type="number"] {
-    width: 220px;
+#scrollable form .input-euro {
+    position: relative;
+}
+
+#scrollable form .input-euro input {
+    width: 216px;
+    padding-right: 20px;
+}
+
+#scrollable form .input-euro:after {
+    position: absolute;
+    top: 0;
+    right: 4px;
+    content: "€";
 }
 
 #scrollable form input[type="reset"] {
@@ -264,6 +276,7 @@ header {
     border: solid 0.25px grey;
     background: #f5f5f5;
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -273,8 +286,9 @@ header {
     line-height: 24px;
     padding: 0 3px;
     border: solid 0.25px grey;
-    background: #ff8b94;
+    background: linear-gradient(to right, #ff8b94 0%, #ff8b94 20%, #f5f5f5 20%, #f5f5f5 100%);
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -284,8 +298,9 @@ header {
     line-height: 24px;
     padding: 0 3px;
     border: solid 0.25px grey;
-    background: #ffaaa5;
+    background: linear-gradient(to right, #ffaaa5 0%, #ffaaa5 40%, #f5f5f5 40%, #f5f5f5 100%);
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -295,8 +310,9 @@ header {
     line-height: 24px;
     padding: 0 3px;
     border: solid 0.25px grey;
-    background: #ffd3b6;
+    background: linear-gradient(to right, #ffd3b6 0%, #ffd3b6 60%, #f5f5f5 60%, #f5f5f5 100%);
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -306,8 +322,9 @@ header {
     line-height: 24px;
     padding: 0 3px;
     border: solid 0.25px grey;
-    background: #dcedc1;
+    background: linear-gradient(to right, #dcedc1 0%, #dcedc1 80%, #f5f5f5 80%, #f5f5f5 100%);
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -319,6 +336,7 @@ header {
     border: solid 0.25px grey;
     background: #a8e6cf;
     font-size: 8pt;
+    text-align: center;
     box-sizing: border-box;
 }
 
