--- a/p2/theme.css
+++ b/p2/theme.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 *:focus {
-    outline: 0px;
+    outline: 0;
 }
 
 header {
@@ -160,6 +160,7 @@ header {
     font-size: 10pt;
     background: #536878;
     box-shadow: 8px 0px 16px 0px rgba(0,0,0,0.2);
+    z-index: 100;
 }
 
 /* Links inside the dropdown */
@@ -167,22 +168,20 @@ header {
     width: 200px;
     height: 50px;
     line-height: 50px;
+    padding-left: 24px;
     border: none;
     text-align: left;
     vertical-align: middle;
     font-size: 10pt;
-    text-decoration: none;
     color: white;
     background: #536878;
-    display: block;
     cursor: pointer;
 }
 
 .dropdown2-content .button3 img {
     vertical-align: middle;
     width: 32px;
-    margin-right: 16px;
-    margin-left: 16px;
+    margin-right: 8px;
 }
 
 /* Change color of dropdown links on hover */
@@ -209,6 +208,7 @@ header {
     height: 100%;
     padding: 10px 10px;
     background: #36454f;
+    z-index: 100;
 }
 
 #sidebar .links {
@@ -223,12 +223,13 @@ header {
 
 #scrollable {
     margin: 60px 0 30px 200px;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px;
+    z-index: 0;
 }
 
 #scrollable form button {
-    position: relative;
-    margin: auto;
+    left: 50%;
+    margin-left: 100px;
 }
 
 #scrollable form {
@@ -364,7 +365,7 @@ footer img {
     line-height: 50px;
     text-align: left;
     vertical-align: middle;
-    padding: 0 40px;
+    padding-left: 32px;
     margin-top: 10px;
     border: none;
     font-size: 120%;
@@ -378,24 +379,6 @@ footer img {
     vertical-align: middle;
     margin-right: 8px;
     width: 32px;
-}
-
-.button2 {
-    position: relative;
-    height: 16px;
-    line-height: 16px;
-    top: -75px;
-    padding: 0 8px;
-    text-align: center;
-    vertical-align: middle;
-    border: none;
-    border-radius: 8px;
-    font-size: 10pt;
-    background: #36454f;
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
 }
 
 .buttonR {
@@ -428,8 +411,6 @@ input[type="search"] {
     line-height: 40px;
     margin-top: 10px;
     text-align: center;
-    border: none;
-    border-radius: 20px;
     font-size: 150%;
     color: #36454f;
     text-decoration: none;
@@ -439,7 +420,6 @@ input[type="search"] {
 
 .category {
     width: 100%;
-    min-width: 459px;
     height: 40px;
     line-height: 40px;
     margin-top: 10px;
@@ -453,114 +433,98 @@ input[type="search"] {
     box-sizing: border-box;
 }
 
-.match0 {
+.match, .match0, .match1, .option {
     width: 100%;
-    min-width: 459px;
     height: 100px;
-    line-height: 100px;
     margin-top: 10px;
     text-align: center;
     border: none;
-    font-size: 20pt;
-    background: linear-gradient(to right, green, #708090, #708090, #708090, red);
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.match1 {
-    width: 100%;
-    min-width: 459px;
-    height: 100px;
-    line-height: 100px;
-    margin-top: 10px;
-    text-align: center;
-    border: none;
-    font-size: 20pt;
-    background: linear-gradient(to right, red, #708090, #708090, #708090, green);
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.match2 {
-    width: 100%;
-    min-width: 459px;
-    height: 100px;
-    line-height: 100px;
-    margin-top: 10px;
-    text-align: center;
-    border: none;
-    font-size: 200%;
     background: #708090;
     color: white;
-    text-decoration: none;
-    display: inline-block;
+    cursor: pointer;
 }
 
-.match0 img, .match1 img, .match2 img {
+.match .matchdetail {
+    height: 25px;
+    line-height: 25px;
+    font-size: 10pt;
+}
+
+.match .matchinfo {
+    position: absolute;
+    width: 50%;
+    height: 100px;
+    line-height: 50px;
+    left: 25%;
+    margin-left: 100px;
+    font-size: 18pt;
+    overflow: hidden;
+}
+
+.match .matchinfo img {
     vertical-align: middle;
-    height: 64px;
+    height: 48px;
+    margin: 0 8px;
 }
 
-.money0 {
-    width: 320px;
-    height: 100%;
-    position: relative;
-    float: left;
-    top: -100px;
+
+.match .side0, .match .side0g, .match .side0r, .match .side1, .match .side1g, .match .side1r {
+    width: 150px;
+    height: 100px;
+    line-height: 100px;
     text-align: center;
-    font-size: 20pt;
+    font-size: 16pt;
     color: white;
     background: #536878;
 }
 
-.arrow0 {
-    position: relative;
+.match .side0, .match .side0g, .match .side0r {
     float: left;
-    top: -100px;
+}
+
+.match .side1, .match .side1g, .match .side1r {
+    float: right;
+}
+
+.match .side0g, .match .side1g {
+    background: #4d804d;
+}
+
+.match .side0r, .match .side1r {
+    background: #804d4d;
+}
+
+.match .arrow0, .match .arrow0g, .match .arrow0r, .match .arrow1, .match .arrow1g, .match .arrow1r {
     width: 0;
     height: 0;
     border-top: 50px solid transparent;
     border-bottom: 50px solid transparent;
+}
+
+.match .arrow0, .match .arrow0g, .match .arrow0r {
+    float: left;
     border-left: 50px solid #536878;
 }
 
-.money1 {
-    width: 320px;
-    height: 100px;
-    position: relative;
+.match .arrow1, .match .arrow1g, .match .arrow1r {
     float: right;
-    top: -100%;
-    text-align: center;
-    font-size: 20pt;
-    color: white;
-    background: #536878;
-}
-
-.arrow1 {
-    position: relative;
-    float: right;
-    top: -100px;
-    width: 0;
-    height: 0;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
     border-right: 50px solid #536878;
 }
 
-.option {
-    width: 100%;
-    height: 100px;
-    line-height: 100px;
-    margin-top: 10px;
-    text-align: center;
-    border: none;
-    font-size: 200%;
-    background: #708090;
-    color: white;
-    text-decoration: none;
-    display: inline-block;
+.match .arrow0g {
+    border-left: 50px solid #4d804d;
+}
+
+.match .arrow1g {
+    border-right: 50px solid #4d804d;
+}
+
+.match .arrow0r {
+    border-left: 50px solid #804d4d;
+}
+
+.match .arrow1r {
+    border-right: 50px solid #804d4d;
 }
 
 .error {
