--- a/p2/theme.css
+++ b/p2/theme.css
@@ -405,11 +405,11 @@ input[type="search"] {
     border: none;
 }
 
-.title {
+.title, .category {
     width: 100%;
     height: 40px;
     line-height: 40px;
-    margin-top: 10px;
+    margin: 10px 0;
     text-align: center;
     font-size: 150%;
     color: #36454f;
@@ -419,28 +419,21 @@ input[type="search"] {
 }
 
 .category {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    margin-top: 10px;
-    text-align: center;
     border: solid 1px #36454f;
     border-radius: 20px;
-    font-size: 150%;
-    color: #36454f;
-    text-decoration: none;
-    display: inline-block;
-    box-sizing: border-box;
 }
 
 .match, .match0, .match1, .option {
     width: 100%;
     height: 100px;
-    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     border: none;
     background: #708090;
     color: white;
+}
+
+.match[onclick], .match0[onclick], .match1[onclick], .option[onclick] {
     cursor: pointer;
 }
 
