--- a/p2/theme.css
+++ b/p2/theme.css
@@ -223,7 +223,7 @@ header {
 
 #scrollable {
     margin: 60px 0 30px 200px;
-    padding: 0 10px;
+    padding: 0 10px 10px 10px;
     z-index: 0;
 }
 
@@ -409,7 +409,7 @@ input[type="search"] {
     width: 100%;
     height: 40px;
     line-height: 40px;
-    margin: 10px 0;
+    margin-top: 10px;
     text-align: center;
     font-size: 150%;
     color: #36454f;
@@ -426,7 +426,7 @@ input[type="search"] {
 .match, .match0, .match1, .option {
     width: 100%;
     height: 100px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
     border: none;
     background: #708090;
