--- a/p2/theme.css
+++ b/p2/theme.css
@@ -427,6 +427,8 @@ input[type="search"] {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+    font-size: 18pt;
+    line-height: 100px;
     text-align: center;
     border: none;
     background: #708090;
@@ -450,7 +452,6 @@ input[type="search"] {
     line-height: 50px;
     left: 25%;
     margin-left: 100px;
-    font-size: 18pt;
     overflow: hidden;
 }
 
