--- a/p2/theme.css
+++ b/p2/theme.css
@@ -435,17 +435,32 @@ footer {
     width: 100%;
     height: 30px;
     line-height: 30px;
-    text-align: right;
+    padding: 5px;
     bottom: 0;
     z-index: 100;
     color: white;
     background: #536878;
+    font-size: 10pt;
+    box-sizing: border-box;
 }
 
 footer img {
-    margin-right: 4px;
-    vertical-align: middle;
+    float: right;
     height: 20px;
+    margin-left: 5px;
+}
+
+footer #usercount {
+    float: left;
+    width: 200px;
+    height: 20px;
+    line-height: 20px;
+}
+
+footer #usercount img {
+    float: none;
+    margin-right: 8px;
+    vertical-align: middle;
 }
 
 .button1 {
